# jjson

./: CMakeLists.txt  README  jjson.pc.in
.github/workflows/: cmake.yml
include.01/jjson/: json.h
include/jjson/: json.h  json.h.01
tests/: CMakeLists.txt  parser_test.cpp
